@@ -16,7 +16,7 @@
 %token VARNAME INTEGER FLOAT STRING
 %token OPT_FIXED OPT_SCIENTIFIC
 
-%left '&' '|'
+%left LOGIC_AND LOGIC_OR
 %left '+' '-'
 %left '*' '/' '%'
 %left '^'
@@ -113,8 +113,8 @@ fact:
 test:
 	'!' test      { $$ = parse_t('!',$2); }
 |	'(' test ')'  { $$ = parse_t($2); }
-|	test '&' test { $$ = parse_t('&',$1,$3); }
-|	test '|' test { $$ = parse_t('|',$1,$3); }
+|	test LOGIC_AND test                     { $$ = parse_t('&',$1,$3); }
+|	test LOGIC_OR  test                     { $$ = parse_t('|',$1,$3); }
 |	expr compare expr                       { $$ = parse_t('?',$2,$1,$3); }
 |	TEST_EOF                                { $$ = parse_t('E'); }
 |	TEST_MATCH '(' string ')'               { $$ = parse_t('M',$3); }
