@@ -1,3 +1,3 @@
 WHILE(!ISEOF, NEWLINE)
-	WHILE(!(ISEOF | MATCH("\n")), SPACE) INT(1,100) END
+	WHILE(!(ISEOF || MATCH("\n")), SPACE) INT(1,100) END
 END
